Fix for bug 10013 - Call the JS onclick event handlers when the DOM click method is invoked on an input element.